--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   "author": "Timofey Morozov",
   "license": "ISC",
   "dependencies": {
-    "core-js": "3.31.0",
-    "jquery": "3.7.0"
+    "core-js": "3.31.0"
   },
   "devDependencies": {
     "@babel/core": "^7.22.5",
@@ -27,5 +26,13 @@
     "webpack": "^5.86.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/MTimofey/mesto-project-bootcamp.git"
+  },
+  "bugs": {
+    "url": "https://github.com/MTimofey/mesto-project-bootcamp/issues"
+  },
+  "homepage": "https://github.com/MTimofey/mesto-project-bootcamp#readme"
 }
